crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_entire_input-10.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: parse(input.into())
---
Err(
    Report {
        errors: [
            ParseError {
                fragment: LocatedSpan {
                    offset: 10,
                    line: 1,
                    fragment: "]/div",
                    extra: (),
                },
                err_type: ExpectedCharacter(
                    '=',
                ),
            },
        ],
    },
)
