crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_entire_input-12.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: parse(input.into())
---
Ok(
    DecorousAst {
        nodes: [],
        script: None,
        css: Some(
            Css {
                rules: [
                    Regular(
                        RegularRule {
                            selector: Selector {
                                parts: [
                                    SelectorPart {
                                        text: Some(
                                            "body",
                                        ),
                                        pseudoes: [],
                                    },
                                ],
                            },
                            declarations: [
                                Declaration {
                                    name: "height",
                                    values: [
                                        Css(
                                            "100vh",
                                        ),
                                    ],
                                },
                            ],
                        },
                    ),
                ],
            },
        ),
    },
)
