crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_entire_input-2.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: ast
---
Err(
    ParseError {
        fragment: Location {
            offset: 5,
            length: 6,
        },
        help: None,
        err_type: InvalidClosingTag(
            "div",
        ),
    },
)
