crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_entire_input-3.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: ast
---
Err(
    ParseError {
        fragment: Location {
            offset: 4,
            length: 1,
        },
        help: None,
        err_type: ExpectedAny(
            [
                "the beginning of an element",
                "a JavaScript expression",
                "plain text",
            ],
        ),
    },
)
