crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_entire_input-4.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: parse(input.into())
---
Ok(
    DecorousAst {
        nodes: [
            Node {
                metadata: Location {
                    offset: 0,
                    length: 2,
                    line: 1,
                    column: 1,
                },
                node_type: Text(
                    "\\/",
                ),
            },
        ],
        script: None,
        css: None,
    },
)
