crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_entire_input-5.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: parse(input.into())
---
Ok(
    DecorousAst {
        nodes: [
            Node {
                metadata: Location {
                    offset: 0,
                    length: 20,
                    line: 1,
                    column: 1,
                },
                node_type: Element(
                    Element {
                        tag: "div",
                        attrs: [],
                        children: [
                            Node {
                                metadata: Location {
                                    offset: 5,
                                    length: 11,
                                    line: 1,
                                    column: 6,
                                },
                                node_type: Text(
                                    "\\#hello \\{",
                                ),
                            },
                        ],
                    },
                ),
            },
        ],
        script: None,
        css: None,
    },
)
