crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_entire_input-6.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: parse(input.into())
---
Err(
    Report {
        errors: [
            ParseError {
                fragment: Location {
                    offset: 0,
                    length: 1,
                    line: 1,
                    column: 1,
                },
                help: Some(
                    Help {
                        corresponding_line: None,
                        message: "escape the slash with \\/",
                    },
                ),
                err_type: ExpectedClosingTag,
            },
        ],
    },
)
