crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_entire_input-7.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: parse(input.into())
---
Err(
    Report {
        errors: [
            ParseError {
                fragment: Location {
                    offset: 5,
                    length: 1,
                    line: 1,
                    column: 6,
                },
                help: Some(
                    Help {
                        corresponding_line: Some(
                            1,
                        ),
                        message: "tag never closed",
                    },
                ),
                err_type: UnclosedTag(
                    "div",
                    1,
                ),
            },
        ],
    },
)
