crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_entire_input-8.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: parse(input.into())
---
Err(
    Report {
        diagnostics: [
            Diagnostic {
                msg: "parser error: invalid character, expected }",
                severity: Error,
                helpers: [
                    Helper {
                        msg: "here",
                        span: 12..13,
                    },
                ],
                offset: 12,
                note: Some(
                    "mustache was never closed",
                ),
            },
        ],
    },
)
