crates/decorous-frontend/src/parser/snapshots/decorous_frontend__parser__tests__can_parse_entire_input-9.snap
---
source: crates/decorous-frontend/src/parser/mod.rs
expression: ast
---
Err(
    ParseError {
        fragment: Location {
            offset: 12,
            length: 5,
        },
        help: None,
        err_type: Expected(
            "a JavaScript expression",
        ),
    },
)
